tests/invalid/open_read_wrong_arg_count/main.py
def run_case() -> None:
    s: str = open("main.py").read(1)


if __name__ == "__main__":
    run_case()
